--- a/contact.html
+++ b/contact.html
@@ -107,12 +107,13 @@
                         </div>
                       </div>
                     </div>
-                    <label class="hidden checkbox-trigger" for="order3"></label>
+                 <!--   <label class="hidden checkbox-trigger" for="order3"></label>
                     <input
                       class="hidden checkbox-trigger"
                       type="checkbox"
                       id="order3"
                     />
+                    -->
                     <div class="popup order-popup">
                       <div
                         class="has-background"
@@ -191,20 +192,20 @@
         <h2>Contact Us</h2>
         <ul>
           <li>
-            <span class="icon-img"
-              ><img src="./images/email-icon.png" alt=""
+            <span
+              ><img class="icon-img" src="./images/email-icon.png" alt=""
             /></span>
             <span class="contact-us-text">rainydays@rainydays.no</span>
           </li>
           <li>
-            <span class="icon-img"
-              ><img src="./images/phone-icon.png" alt=""
+            <span 
+              ><img class="icon-img" src="./images/phone-icon.png" alt=""
             /></span>
             <span class="contact-us-text">+4780000000</span>
           </li>
           <li>
-            <span class="icon-img"
-              ><img src="./images/location-icon.png" alt=""
+            <span
+              ><img class="icon-img" src="./images/location-icon.png" alt=""
             /></span>
             <span class="contact-us-text"
               >Bergliveien 136, 1212 Oslo, Norway</span
