--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -150,7 +150,6 @@
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
             <a href="about.html">About Us</a>
-            <!---->
             <a href="contact.html">Contact</a>
           </div>
         </div>
@@ -213,8 +212,7 @@
           </li>
         </ul>
         <div class="map">
-          <img src="./images/map.jpg" alt="map" />
-        </div>
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">how to add a google map to your website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>        </div>
         <div class="contact-form-container">
             <div>
             <label>First Name</label>
