--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     ></script>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/modal.css" />
+    <link rel="stylesheet" href="./styles/cart.css" />
     <link rel="stylesheet" href="./styles/contact.css" />
     <link rel="stylesheet" href="./styles/contact-form.css" />
     <title>Rainy days | Home</title>
@@ -55,42 +56,18 @@
                 alt="Cart Icon"
                 class="cart-icon"
               />
-              <label class="hidden checkbox-trigger" for="yourcart1"></label>
-              <input
+   <!--           <label class="hidden checkbox-trigger" for="yourcart1"></label>          -->
+              <input onclick="showCart()"
                 class="hidden checkbox-trigger"
                 type="checkbox"
                 id="yourcart1"
               />
-              <div class="overlay cart-overlay">
-                <a href="index.html">
+            <div class="overlay cart-overlay">
+         <!--     <a href="index.html">      -->
                   <div class="overlay-inside cart">
                     <h2>Your Cart</h2>
-                    <ul>
-                      <li>
-                        <span class="cart-img">
-                          <img
-                            src="./images/red-man.jpg"
-                            alt="Red Jacket for Men"
-                          />
-                        </span>
-                        <span>x1</span>
-                        <span>98 $</span>
-                      </li>
-                      <li>
-                        <span class="cart-img">
-                          <img
-                            src="./images/red-man.jpg"
-                            alt="Red Jacket for Men"
-                          />
-                        </span>
-                        <span>x1</span>
-                        <span>98 $</span>
-                      </li>
-                      <li class="total">
-                        <span>Total</span>
-                        <span>228 $</span>
-                      </li>
-                    </ul>
+                    <div id="cart-div"></div>
+                    <button class="cta cta-red" type="cta" onclick="showModal()">Check Out</button>
                  <!--   <label class="hidden checkbox-trigger" for="order3"></label>
                     <input
                       class="hidden checkbox-trigger"
@@ -110,7 +87,7 @@
                           <p>We have sent order confirmation to your email.</p>
                         </div>
                       </div>
-                    </div>
+                    </div>       
                   </div>
                 </a>
               </div>
@@ -283,8 +260,20 @@
         </div>
       </div>
     </footer>
-            <!-- Modal -->
+            <!--Modal -->
+            <div id="checkOutModal" class="check-out-modal">
+              <div class="check-out-modal-content">
+                  <span class="close" onclick="closeModal()">&times;</span>
+                <div class="check-out-modal-body">
+                  <p>Thank you for your purchase</p>
+                </div>
+                </div>
+              </div>
+              </div>
+        
+            </div>
     <script src="./js/hamburger-menu-script.js"></script>
+    <script src="./js/cart.js"></script>
     <script src="./js/modal-script.js"></script>
     <script src="./js/contact-form.js"></script>
 
