--- a/outlet.html
+++ b/outlet.html
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/modal.css" />
+    <link rel="stylesheet" href="./styles/cart.css" />
     <title>Rainy days | Outlet</title>
     <!-- Hotjar Tracking Code for https://silly-volhard-7894ac.netlify.app -->
 <script>
@@ -47,34 +49,15 @@
             <div class="your-cart">
               <p>Your cart</p>
               <img src="./images/cart-icon.png" alt="Cart Icon" class="cart-icon" />
-              <label class="hidden checkbox-trigger" for="yourcart1"></label>
-              <input class="hidden checkbox-trigger" type="checkbox" id="yourcart1">
+     <!--         <label class="hidden checkbox-trigger" for="yourcart1"></label>   -->
+              <input onclick="showCart()" class="hidden checkbox-trigger" type="checkbox" id="yourcart1">
               <div class="overlay cart-overlay">
-                <a href="outlet.html">
+      <!--          <a href="outlet.html">      -->
                 <div class="overlay-inside cart">
                     <h2>Your Cart</h2>
-                    <ul>
-                      <li>
-                        <span class="cart-img">
-                          <img src="./images/red-man.jpg" alt="Red Jacket for Men" />
-                        </span>
-                        <span>x1</span>
-                        <span>98 $</span>
-                      </li>
-                      <li>
-                        <span class="cart-img">
-                          <img src="./images/red-man.jpg" alt="Red Jacket for Men" />
-                        </span>
-                        <span>x1</span>
-                        <span>98 $</span>
-                      </li>
-                      <li class="total">
-                        <span>Total</span>
-                        <span>228 $</span>
-                      </li>
-                    </ul>
-                    <button class="cta cta-red" type="cta">Check Out</button>
-                    <label class="hidden checkbox-trigger" for="order3"></label>
+                    <div id="cart-div"></div>
+                    <button class="cta cta-red" type="cta" onclick="showModal()">Check Out</button>
+    <!--            <label class="hidden checkbox-trigger" for="order3"></label>
                     <input class="hidden checkbox-trigger" type="checkbox" id="order3">
                     <div class="popup order-popup">
                       <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
@@ -83,7 +66,7 @@
                           <p>We have sent order confirmation to your email.</p>
                         </div>
                       </div>
-                    </div>
+                    </div>     -->
                   </div>
                 </a>
               </div>
@@ -478,5 +461,19 @@
         </div>
       </div>
     </footer>
+            <!--Modal -->
+            <div id="checkOutModal" class="check-out-modal">
+              <div class="check-out-modal-content">
+                  <span class="close" onclick="closeModal()">&times;</span>
+                <div class="check-out-modal-body">
+                  <p>Thank you for your purchase</p>
+                </div>
+                </div>
+              </div>
+              </div>
+        
+            </div>
+    <script src="./js/cart.js"></script>
+    <script src="./js/modal-script.js"></script>
   </body>
 </html>
