--- a/women.html
+++ b/women.html
@@ -14,6 +14,8 @@
     ></script>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/modal.css" />
+    <link rel="stylesheet" href="./styles/cart.css" />
+
 
     <title>Rainy days | Women</title>
     <!-- Hotjar Tracking Code for https://silly-volhard-7894ac.netlify.app -->
@@ -48,28 +50,30 @@
             />
             <div class="your-cart">
               <p>Your cart</p>
-              <img src="./images/cart-icon.png" alt="Cart Icon" class="cart-icon" />
-              <label class="hidden checkbox-trigger" for="yourcart1"></label>
+              <img src="./images/cart-icon.png" alt="Cart Icon" class="cart-icon"/>
+         <!--     <label class="hidden checkbox-trigger" for="yourcart1"></label> 
+          -->
               <input onclick="showCart()" class="hidden checkbox-trigger" type="checkbox" id="yourcart1">
+            
               <div class="overlay cart-overlay">
             <!--    <a href="women.html"> -->
                 <div class="overlay-inside cart">
                     <h2>Your Cart</h2>
                     <div id="cart-div"></div>
                     <button class="cta cta-red" type="cta" onclick="showModal()">Check Out</button>
-            <!--        <label class="hidden checkbox-trigger" for="order3"></label>
+              <!--      <label class="hidden checkbox-trigger" for="order3"></label>
                     <input class="hidden checkbox-trigger" type="checkbox" id="order3">
                     -->
 
-                    <div class="popup order-popup">
+            <!--      <div class="popup order-popup">
                       <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                         <div class="order-popup-text">
                           <p>Thank you for your order.</p>
                           <p>We have sent order confirmation to your email.</p>
                         </div>
-                      </div>
-                    </div>
-                  </div>
+                      </div>    
+                    </div>     -->
+                  </div>        
                 </a>
               </div>
             </div>
@@ -82,7 +86,7 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -213,7 +217,7 @@
                      <!-- <label class="hidden checkbox-trigger" for="addtocart1"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
                       -->
-                 <!--     <div class="overlay cart-overlay">
+                      <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
                           <ul>
@@ -248,7 +252,7 @@
                             </div>
                           </div>
                         </div>
-                      </div> -->
+                      </div> 
                     </div>
                   </div>
                   </div>
